--- a/vue/package.json
+++ b/vue/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.8.55",
+    "@mdi/js": "^5.8.55",
     "core-js": "^3.6.5",
+    "mdi": "^2.2.43",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
