--- a/vue/package.json
+++ b/vue/package.json
@@ -18,7 +18,8 @@
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
         "vuetify": "^2.2.11",
-        "vuex": "^3.4.0"
+        "vuex": "^3.4.0",
+        "vuex-persistedstate": "^4.0.0-beta.1"
     },
     "devDependencies": {
         "@types/jest": "^24.0.19",
@@ -28,7 +29,7 @@
         "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-plugin-router": "~4.5.0",
         "@vue/cli-plugin-typescript": "~4.5.0",
-        "@vue/cli-plugin-unit-jest": "~4.5.0",
+        "@vue/cli-plugin-unit-jest": "^4.5.9",
         "@vue/cli-plugin-vuex": "~4.5.0",
         "@vue/cli-service": "~4.5.0",
         "@vue/eslint-config-prettier": "^6.0.0",
@@ -39,8 +40,8 @@
         "eslint-plugin-vue": "^6.2.2",
         "husky": "^5.0.4",
         "prettier": "^1.19.1",
-        "sass": "^1.26.5",
-        "sass-loader": "^8.0.2",
+        "sass": "^1.19.0",
+        "sass-loader": "^8.0.0",
         "typescript": "~3.9.3",
         "vue-cli-plugin-vuetify": "^2.0.7",
         "vue-template-compiler": "^2.6.11",
