--- a/vue/package.json
+++ b/vue/package.json
@@ -34,7 +34,7 @@
         "@vue/cli-service": "~4.5.0",
         "@vue/eslint-config-prettier": "^6.0.0",
         "@vue/eslint-config-typescript": "^5.0.2",
-        "@vue/test-utils": "^1.0.3",
+        "@vue/test-utils": "^1.1.1",
         "eslint": "^6.7.2",
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-vue": "^6.2.2",
@@ -44,6 +44,7 @@
         "sass-loader": "^8.0.0",
         "typescript": "~3.9.3",
         "vue-cli-plugin-vuetify": "^2.0.7",
+        "vue-jest": "^3.0.7",
         "vue-template-compiler": "^2.6.11",
         "vuetify-loader": "^1.3.0"
     }
