--- a/vue/package.json
+++ b/vue/package.json
@@ -15,6 +15,7 @@
         "@mdi/js": "^5.8.55",
         "core-js": "^3.6.5",
         "mdi": "^2.2.43",
+        "node-sass": "^5.0.0",
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
         "vuetify": "^2.2.11",
@@ -41,7 +42,7 @@
         "husky": "^5.0.4",
         "prettier": "^1.19.1",
         "sass": "^1.19.0",
-        "sass-loader": "^8.0.0",
+        "sass-loader": "^8.0.2",
         "typescript": "~3.9.3",
         "vue-cli-plugin-vuetify": "^2.0.7",
         "vue-jest": "^3.0.7",
